dataset/local/tf_ec2_public_ip/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-ec2-public-ip
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-ec2-public-ip
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: check-ec2-public-ip
    kind: Plan
    resources:
      - bad-plan
    result: fail
